fixing overflow issue

--- a/style.css
+++ b/style.css
@@ -7,15 +7,12 @@
 }
 
 #landing-page{
-  width: 100vw;
-  height: auto;
   display: flex;
   flex-direction: column;
 }
 
 nav{
   width: 100%;
-  width: 100vw;
   height: 86px;
   background-color: #0E1D36;
   display: flex;
@@ -57,7 +54,7 @@ nav .contact svg {
 }
 
 .first-section{
-  width: 100vw;
+  width: 100%;
   height: 807px;
   /* flex-shrink: 0; */
   display: flex;
@@ -163,7 +160,7 @@ nav .contact svg {
 }
 
 .second-section{
-  width: 100vw;
+  width: 100%;
   height: 771px;
   background: #0E1D36;
 }
@@ -236,4 +233,9 @@ nav .contact svg {
   font-weight: 700;
   line-height: normal;
   margin: 20px
+}
+
+.third-section{
+  height: 964px;
+  width: 100%;
 }
